--- a/webserver/views/input/cancel_input_item.html
+++ b/webserver/views/input/cancel_input_item.html
@@ -59,7 +59,7 @@
     function count(){
         if (counter > timeLimit) {
             clearInterval(intervalTimer);
-            location.href='/';
+            //location.href='/';
             // 30초 지나면 알림
         }
         counter += 1;
