키오스크 수정 - header, 광고포함 메인페이지 구현

--- a/webserver/views/head.html
+++ b/webserver/views/head.html
@@ -94,5 +94,13 @@
                 confirmButtonText: '확인',
             });
         }
+
+        function time(){
+            const date = new Date();
+            datetime = date.toLocaleString('ko-kr');
+            $datetime.innerText = datetime;
+
+        }
+
     </script>
 </head>
