--- a/webserver/views/output/item_output_confirm.html
+++ b/webserver/views/output/item_output_confirm.html
@@ -56,7 +56,7 @@
     function count(){
         if (counter > timeLimit) {
             clearInterval(intervalTimer);
-            returnItem()
+            returnAll()
         }
         counter += 1;
     }
@@ -74,12 +74,24 @@
     }
     /* 홈 버튼 선택시 */
     $home_btn.onclick = () => {
-        returnItem()
+        returnAll()
     }
     
-    /* 불출 취소 시 재수납 */
+    /* 반납 버튼 선택 시 재수납 */
     function returnItem(){
         axios.post('/output/return?itemId=' + itemId)
+            .then(axiosResult => {
+                let response = axiosResult.data;
+                console.log(response);
+            })
+            .catch(err => {
+                console.error(err);
+            });
+    }
+
+    /* 처음으로 버튼, 5초 경과 시 전체 취소 */
+    function returnAll(){
+        axios.post('/output/return_all?itemId=' + itemId)
             .then(axiosResult => {
                 let response = axiosResult.data;
                 console.log(response);
