불출 - 불출전체취소 각화면적용

--- a/webserver/views/output/item_output_password_form.html
+++ b/webserver/views/output/item_output_password_form.html
@@ -66,7 +66,7 @@
     function count(){
         if (counter > timeLimit) {
             clearInterval(intervalTimer);
-            returnItem();
+            returnAll();
         }
         counter += 1;
     }
@@ -103,6 +103,18 @@
     /* 불출 취소 시 재수납 */
     function returnItem(){
         axios.post('/output/return?itemId=' + itemId)
+            .then(axiosResult => {
+                let response = axiosResult.data;
+                console.log(response);
+            })
+            .catch(err => {
+                console.error(err);
+            });
+    }
+
+    /* 30초 경과 시 전체 취소 */
+    function returnAll(){
+        axios.post('/output/return_all?itemId=' + itemId)
             .then(axiosResult => {
                 let response = axiosResult.data;
                 console.log(response);
