--- a/webserver/views/output/item_output_password_mismatch.html
+++ b/webserver/views/output/item_output_password_mismatch.html
@@ -4,7 +4,7 @@
 <main id="main">
     <div class="content-wrap">
         <div class="fixed-btn">
-            <button class="btn-normal" id="$home_btn"><a href="/">첫 화면으로</a></button>
+            <button class="btn-normal" id="$home_btn">첫 화면으로</a></button>
         </div>
 
         <!-- 정보 오류 -->
@@ -39,7 +39,7 @@
     function count(){
         if (counter > timeLimit) {
             clearInterval(intervalTimer);
-            returnItem();
+            returnAll();
         }
         counter += 1;
     }
@@ -51,7 +51,7 @@
 
     /* 홈 버튼 선택시 */
     $home_btn.onclick=() => {
-        returnItem();
+        returnAll();
     }
 
     /* 취소 버튼 선택시 */
@@ -62,6 +62,18 @@
     /* 불출 취소 시 재수납 */   
     function returnItem(){
         axios.post('/output/return?itemId=' + itemId)
+            .then(axiosResult => {
+                let response = axiosResult.data;
+                console.log(response);
+            })
+            .catch(err => {
+                console.error(err);
+            });
+    }
+
+    /* 처음으로 버튼, 15초 경과 시 전체 취소 */
+    function returnAll(){
+        axios.post('/output/return_all?itemId=' + itemId)
             .then(axiosResult => {
                 let response = axiosResult.data;
                 console.log(response);
