--- a/webserver/views/output/item_return.html
+++ b/webserver/views/output/item_return.html
@@ -9,7 +9,7 @@
                 <div class="img-wrap">
                     <img src="/static/images/ico_complete.png" alt="">
                 </div>
-                <p class="msg">택배 입고 중 …</p>
+                <p class="msg">택배 재입고 중 …</p>
             </div>
         </div>
     </div>
