--- a/webserver/views/output/output_error.html
+++ b/webserver/views/output/output_error.html
@@ -13,7 +13,7 @@
                 <div class="fail-msg">
                     <p>아래 사유로 불출에 실패했습니다.</p>
                     <div id="error_msg">
-                        <span>빈 슬롯이 존재하지 않습니다.</span>
+                        <span>트레이 버퍼에 빈 공간이 존재하지 않습니다.</span>
                     </div>
                     
                 </div>
