--- a/webserver/static/css/main.css
+++ b/webserver/static/css/main.css
@@ -36,7 +36,7 @@
 .popup-box {width: 55%; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); background-color: #fff; box-sizing: border-box; padding: 40px; border-radius: 22px;}
 .popup-box.msg-box {width: 60%;}
 
-.popup-header {display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px; padding-bottom: 20px; border-bottom: 1px solid #ccc; font-size: 3rem;}
+.popup-header {display: flex; justify-content: center; align-items: center; margin-bottom: 20px; padding-bottom: 20px; border-bottom: 1px solid #ccc; font-size: 3rem;}
 .popup-header .close {position: relative; width: 16px; height: 16px;}
 .popup-header .close .bar {width: 16px; height: 1.5px; background-color: #000; display: inline-block; position: absolute; top: 4px; left: 0; cursor: pointer;}
 .popup-header .close .bar:nth-child(1) {transform: rotate(45deg);}
