add password hashing

--- a/webserver/views/output/item_output_password_form.html
+++ b/webserver/views/output/item_output_password_form.html
@@ -81,7 +81,7 @@
 
         axios.post('/output/password/check', {
             item_id: parseInt(itemId),
-            password: parseInt($password_input.value),
+            password: $password_input.value,
         })
             .then(axiosResult => {
                 let response = axiosResult.data;
