--- a/webserver/views/head.html
+++ b/webserver/views/head.html
@@ -90,7 +90,7 @@
                 icon: 'warning',
                 title: msg,
                 text: text,
-                confirmButtonColor: '#1b4b43', // confrim 버튼 색깔 지정
+                confirmButtonColor: '#1b4b43', // confirm 버튼 색깔 지정
                 confirmButtonText: '확인',
             });
         }
