--- a/webserver/views/main.html
+++ b/webserver/views/main.html
@@ -19,6 +19,9 @@
                 <p class="btn-title">택배<br>찾기</p>
             </div>
         </div>
+        <div class="info-wrap">
+            <span class="number">관리사무소 042-111-2222</span>
+        </div>
     </div>
 </main>
 
