--- a/webserver/views/head.html
+++ b/webserver/views/head.html
@@ -86,7 +86,7 @@
         }
 
         function alert(msg, text) {
-            Swal.fire({
+            return Swal.fire({
                 icon: 'warning',
                 title: msg,
                 text: text,
