--- a/webserver/views/setting/update_password_form.html
+++ b/webserver/views/setting/update_password_form.html
@@ -36,24 +36,15 @@
             <div class="content-wrap">
                 <div class="setting-wrap">
                     <div class="setting-body">
-                        <div class="setting-title">회원 정보</div>
+                        <div class="setting-title">회원 PW</div>
                         <div class="setting-content">
                             <div class="info-row">
-                                <span class="info-label">회원명</span>
-                                <p class="info-value">홍길동</p>
+                                <span class="info-label">신규 PW</span>
+                                <input type="password" class="info-value" id="$new_password"></p>
                             </div>
                             <div class="info-row">
-                                <span class="info-label">회원 PW</span>
-                                <p class="info-value">****</p>
-                                <button class="btn change_btn">변경</button>
-                            </div>
-                            <div class="info-row">
-                                <span class="info-label">휴대전화</span>
-                                <p class="info-value">000-0000-0000</p>
-                            </div>
-                            <div class="info-row">
-                                <span class="info-label">주소</span>
-                                <p class="info-value"><span class="address_info"></span>호</p>
+                                <span class="info-label">재입력 PW</span>
+                                <input type="password" class="info-value" id="$confirm_password"></p>
                             </div>
                         </div>
                         <div class="popup-layer" style="display: none;" id="popup_keypad">
@@ -85,7 +76,8 @@
                     </div>
                     <div class="msg-footer">
                         <div class="btn-wrap">
-                            <button class="btn-green" id="ok_btn">확인</button>
+                            <button class="btn-green" id="ok_btn">변경</button>
+                            <button class="btn-normal btn-white" id="cancel_btn">취소</button>
                         </div>
                     </div>
 
@@ -109,34 +101,32 @@
         counter += 1;
     }
 
-    let input = '$address_input'
-    let address_list = [];
+    let input = '$new_password'
     let password_list = [];
+    let confirm_password_list = [];
 
-    $address_input.onclick = () => {
+    $new_password.onclick = () => {
         // 타이머 리셋
         counter = 0;
 
-        $address_input.focus();
+        $new_password.focus();
         input = $(":focus").attr('id');
         document.getElementById("popup_keypad").style.display = 'block';
-        number_val.type = 'text';
 
-        let address = address_list.join('');
-        document.getElementById("number_val").value = address;
+        let new_password = password_list.join('');
+        document.getElementById("number_val").value = new_password;
     };
 
-    $password_input.onclick = () => {
+    $confirm_password.onclick = () => {
         // 타이머 리셋
         counter = 0;
 
-        $password_input.focus();
+        $confirm_password.focus();
         input = $(":focus").attr('id');
         document.getElementById("popup_keypad").style.display = 'block';
-        number_val.type = 'password';
 
-        let password = password_list.join('');
-        document.getElementById("number_val").value = password;
+        let confirm_password = confirm_password_list.join('');
+        document.getElementById("number_val").value = confirm_password;
     };
 
     /* 숫자패드 숫자버튼 눌렀을때 */
@@ -145,15 +135,15 @@
         counter = 0;
 
         number = $(this).attr('value');
-        if (input === '$address_input') {
-            address_list.push(number);
-            let address = address_list.join('');
-            document.getElementById("$address_input").value = address;
-            document.getElementById("number_val").value = address;
-        } else if(input === '$password_input'){
+        if (input === '$new_password') {
             password_list.push(number);
-            password = password_list.join('');
-            document.getElementById("$password_input").value = password;
+            let address = password_list.join('');
+            document.getElementById("$new_password").value = address;
+            document.getElementById("number_val").value = address;
+        } else if(input === '$confirm_password'){
+            confirm_password_list.push(number);
+            password = confirm_password_list.join('');
+            document.getElementById("$confirm_password").value = password;
             document.getElementById("number_val").value = password;
         }
     });
@@ -163,16 +153,16 @@
         // 타이머 리셋
         counter = 0;
 
-        if (input === '$address_input') {
-            address_list.pop();
-            let address = address_list.join('');
-            document.getElementById("$address_input").value = address;
-            document.getElementById("number_val").value = address;
-        } else if(input === '$password_input') {
+        if (input === '$new_password') {
             password_list.pop();
-            let password = password_list.join('');
-            document.getElementById("$password_input").value = password;
-            document.getElementById("number_val").value = password;
+            let new_password = password_list.join('');
+            document.getElementById("$new_password").value = new_password;
+            document.getElementById("number_val").value = new_password;
+        } else if(input === '$confirm_password') {
+            confirm_password_list.pop();
+            let confirm_password = confirm_password_list.join('');
+            document.getElementById("$confirm_password").value = confirm_password;
+            document.getElementById("number_val").value = confirm_password;
         }
     };
 
@@ -185,31 +175,38 @@
         document.getElementById("number_val").value = ""
     };
 
+    const url = new URL(window.location.href);
+    const address = url.searchParams.get("address");
+
+
     ok_btn.onclick = () => {
         // 타이머 리셋
         counter = 0;
 
-        axios.post('/setting/password/check', {
-            address: $address_input.value,
-            password: $password_input.value,
-        })
-            .then(axiosResult => {
-                let response = axiosResult.data;
-                console.log(response);
-                location.replace('/setting/user_info');
-            })
-            .catch(err => {
-                alert('비밀번호가 올바르지 않습니다.');
-                //location.replace('/output/password/mismatch');
-                console.error(err);
-            })
+        // 신규 pw, 재입력 pw 일치 확인
+        if ($new_password.value != $confirm_password.value) {
+            console.log($new_password.value, $confirm_password.value);
+            alert('변경 PW가 일치하지 않습니다. 재 확인 바랍니다.')
+            return
+        } else {
+                axios.post('/setting/password/update?address='+address, {password: $new_password.value}) .then(axiosResult => {
+                    let response = axiosResult.data;
+                    console.log(response);
+                    alert('회원 PW를 정상적으로 변경했습니다.')
+                    .then(() => {
+                        location.replace('/setting/user_info?address='+address);
+                    });
+                }).catch(err => {
+                    alert('비밀번호가 올바르지 않습니다.');
+                    //location.replace('/output/password/mismatch');
+                    console.error(err);
+                })
+        }       
     }
 
 
     /* 입력완료 버튼 선택시 */
     cancel_btn.onclick = () => {
-        console.log("--")
-
         location.href='/';
     };
     
