--- a/webserver/static/css/main1.css
+++ b/webserver/static/css/main1.css
@@ -128,11 +128,11 @@
 .setting-wrap .list-top .value {font-size: 3rem; font-weight: 700; background-color: #efefef; padding: 15px 50px; margin: auto; display: flex; align-items: center; justify-content: center; width: 400px;}
 .setting-wrap .list-top input {width: 100%; height: 48px; border: none; margin-right: 10px; background-color: transparent; font-size: 3rem; font-weight: 700; text-align: center;}
 .setting-wrap .setting-content {padding: 15px;}
-.setting-wrap .setting-content .info-row { margin-bottom: 10px; display: flex; align-items: center; padding-bottom: 20px; }
-.setting-wrap .setting-content .info-label { width: 170px; font-size: 2.2rem;  font-weight: bold; }
+.setting-wrap .setting-content .info-row { margin-bottom: 30px; display: flex; align-items: center; }
+.setting-wrap .setting-content .info-label { width: 200px; font-size: 2.6rem;  font-weight: bold; }
 .setting-wrap .setting-content .info-value { flex: 1; margin: 0; padding: 30px; background-color: #f5f5f5; border: 1px solid #ccc; border-radius: 3px; font-size: 2rem; }
 .setting-wrap .setting-content .address_info { width: 100%; }
-.setting-wrap .setting-content .btn { border: none; cursor: pointer; background-color: #1b4b43; color: white; margin-left: 20px; padding: 30px 110px; font-size: 2rem;  border-radius: 10px; }
+.setting-wrap .setting-content .btn { border: none; cursor: pointer; background-color: #1b4b43; color: white; margin-left: 20px; padding: 30px 110px; font-size: 2.5rem;  border-radius: 10px; }
 
 /* .list-box .list-title {font-size: 2.8rem; font-weight: 700; text-align: center; margin: 0 auto 80px; background-color: #1b4b43; color: #fff; padding: 18px 30px; box-sizing: border-box; width: fit-content; border-radius: 15px; word-break: keep-all; line-height: 135%;}
 .list-box .list-top {text-align: center; margin-bottom: 62px; gap: 40px; align-items: center; justify-content: center;}
