Add err handler

--- a/webserver/views/error/trouble.html
+++ b/webserver/views/error/trouble.html
@@ -9,7 +9,7 @@
                 <div class="img-wrap">
                     <img src="/static/images/ico_report_red.png" alt="">
                 </div>
-                <p class="msg">화재가 발생했습니다.<br>택배함에서 물러나주세요</p>
+                <p class="msg">네트워크 절체가 발생했습니다.<br>택배함에서 물러나주세요</p>
             </div>
         </div>
     </div>
